[package]
name = "lite-musik"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sciter-rs = "*"
mp3-duration = "0.1.6"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "lite_musik.exe"
LegalCopyright = "Copyright © 2021"
FileDescription = "Lite Musik: Tiny MP3 player!"
ProductName = "Lite Musik"
ProductVersion = "0.1.0"